# BewerbungsManager

./: .env.example  .gitignore  DEPLOY.md  README.md  Readme.md  backup.sh  run.sh  serve.sh
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  seed.py
backend/app/models/: __init__.py  tables.py
backend/app/routers/: applications.py  checklist.py  fit.py  generate.py  jobs.py  profile.py  quickfit.py  search.py  suggestions.py
backend/app/schemas/: __init__.py  applications.py  checklist.py  enrich.py  fit.py  generate.py  hr4u.py  improve.py  jobimport.py  lenient.py  profile.py  quickfit.py  search.py  suggest.py
backend/app/services/: citations.py  cv_parser.py  enrich.py  fit.py  generate.py  hr4u.py  improve.py  jobimport.py  llm.py  quickfit.py  suggest.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260626_0001_create_schema.py  20260627_0002_education_and_links.py  20260627_0003_ghosted_status.py  20260628_0004_tailored_cv_kind.py
backend/tests/: test_applications_routes.py  test_checklist_suggestions_routes.py  test_citations.py  test_e2e_happy_path.py  test_enrich_routes.py  test_fit_routes.py  test_generate_routes.py  test_hr4u_client.py  test_improve_routes.py  test_lenient_shapes.py  test_llm_service.py  test_main.py  test_models.py  test_profile_routes.py  test_quickfit_routes.py  test_search_routes.py  test_seed.py
deploy/: jobcraft.service
docs/: API.md  LLM_CONTRACTS.md  SPEC.md  TASKS.md  TECHNICAL.md  UI.md  docs.md  hr4u-findings.md
frontend/: index.html  (+3 more)
(+21 files in other folders)
