[project]
name = "jobcraft-backend"
version = "0.1.0"
description = "FastAPI backend for JobCraft"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.116.0,<0.117.0",
    "httpx>=0.28.1",
    "litellm>=1.89.4",
    "pydantic-settings>=2.10.0,<3.0.0",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.35.0,<0.36.0",
]

[project.optional-dependencies]
# Install with `uv sync --extra postgres` (or `pip install .[postgres]`) when
# DATABASE_URL points at Postgres for the multi-user-ready deployment.
postgres = [
    "psycopg[binary]>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
